--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
                         <div class="collapse navbar-collapse sub-menu-bar" id="navbarTwo">
                             <ul class="navbar-nav m-auto">
                                 <li class="nav-item active"><a class="page-scroll" href="#home">home</a></li>
-                                <li class="nav-item"><a class="page-scroll" href="#services">Services</a></li>
-                                <li class="nav-item"><a class="page-scroll" href="#portfolio">Portfolio</a></li>
-                                <li class="nav-item"><a class="page-scroll" href="#pricing">Pricing</a></li>
-                                <li class="nav-item"><a class="page-scroll" href="#about">About</a></li>
-                                <li class="nav-item"><a class="page-scroll" href="#team">Team</a></li>
-                                <li class="nav-item"><a class="page-scroll" href="#contact">Contact</a></li>
+                                <li class="nav-item"><a class="page-scroll" href="#services">Servicios</a></li>
+                                <li class="nav-item"><a class="page-scroll" href="#portfolio">Portafolio</a></li>
+                                <li class="nav-item"><a class="page-scroll" href="#pricing">Funciones</a></li>
+                                <li class="nav-item"><a class="page-scroll" href="#about">FAQ </a></li>
+                                <li class="nav-item"><a class="page-scroll" href="#team">Nosotros</a></li>
+                                <li class="nav-item"><a class="page-scroll" href="#contact">Contacto</a></li>
                             </ul>
                         </div>
 
@@ -152,12 +152,12 @@
                             <div class="row">
                                 <div class="col-lg-6">
                                     <div class="slider-content">
-                                        <h1 class="title">Crafted for Business</h1>
-                                        <p class="text">We blend insights and strategy to create digital products for forward-thinking organisations.</p>
-                                        <ul class="slider-btn rounded-buttons">
-                                            <li><a class="main-btn rounded-one" href="#">GET STARTED</a></li>
-                                            <li><a class="main-btn rounded-two" href="#">DOWNLOAD</a></li>
-                                        </ul>
+                                        <h1 class="title">Travit</h1>
+                                        <p class="text">Todo desde la palma de tu mano!  Prueba nuestro prototipo en linea!</p>
+                                          <ul class="slider-btn rounded-buttons">
+                                            <li><a class="main-btn rounded-one" target="_blank" href="https://marvelapp.com/prototype/8073c43/screen/76694829">Prototipo</a></li>
+                                          
+                                        </ul> 
                                     </div>
                                     <!-- slider-content -->
                                 </div>
@@ -296,7 +296,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6 col-md-10">
                     <div class="section-title text-center pb-10">
-                        <h3 class="title">Featured Works</h3>
+                        <h3 class="title">Trabajos</h3>
                         <p class="text">Stop wasting time and money designing and managing a website that doesn’t get results. Happiness guaranteed!</p>
                     </div>
                     <!-- section title -->
@@ -516,7 +516,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6 col-md-10">
                     <div class="section-title text-center pb-25">
-                        <h3 class="title">Pricing Plans</h3>
+                        <h3 class="title">Pricing? </h3>
                         <p class="text">Stop wasting time and money designing and managing a website that doesn’t get results. Happiness guaranteed!</p>
                     </div>
                     <!-- section title -->
@@ -814,8 +814,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6 col-md-10">
                     <div class="section-title text-center pb-30">
-                        <h3 class="title">Meet The Team</h3>
-                        <p class="text">Stop wasting time and money designing and managing a website that doesn’t get results. Happiness guaranteed!</p>
+                        <h3 class="title">Conoce al equipo</h3>
                     </div>
                     <!-- section title -->
                 </div>
@@ -920,22 +919,22 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6 col-md-10">
                     <div class="section-title text-center pb-30">
-                        <h3 class="title">Contact</h3>
-                        <p class="text">Stop wasting time and money designing and managing a website that doesn’t get results. Happiness guaranteed!</p>
+                        <h3 class="title">Contacto</h3>
+                     <!--   <p class="text">Contactanos puedes </p>--> 
                     </div>
                     <!-- section title -->
                 </div>
             </div>
-            <!-- row -->
+            <!-- row 
             <div class="row">
                 <div class="col-lg-12">
                     <div class="contact-map mt-30">
                         <iframe id="gmap_canvas" src="https://maps.google.com/maps?q=Mission%20District%2C%20San%20Francisco%2C%20CA%2C%20USA&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
                     </div>
-                    <!-- row -->
+                  row 
                 </div>
             </div>
-            <!-- row -->
+          row -->
             <div class="contact-info pt-30">
                 <div class="row ">
                     <div class="col-lg-4 col-md-6">
@@ -944,7 +943,7 @@
                                 <i class="lni lni-map-marker"></i>
                             </div>
                             <div class="contact-info-content media-body">
-                                <p class="text"> Elizabeth St, Melbourne<br>1202 Australia.</p>
+                                <p class="text"> Próximamente </p>
                             </div>
                         </div>
                         <!-- single contact info -->
@@ -955,8 +954,7 @@
                                 <i class="lni lni-envelope"></i>
                             </div>
                             <div class="contact-info-content media-body">
-                                <p class="text">hello@ayroui.com</p>
-                                <p class="text">support@uideck.com</p>
+                                <p class="text">travitmx@gmail.com</p>
                             </div>
                         </div>
                         <!-- single contact info -->
@@ -967,8 +965,9 @@
                                 <i class="lni lni-phone"></i>
                             </div>
                             <div class="contact-info-content media-body">
-                                <p class="text">+333 789-321-654</p>
-                                <p class="text">+333 985-458-609</p>
+                                <p class="text">+52 333-475-8777</p>
+                                <p class="text">+52 331-717-9491</p>
+                                <p class="text">+52 331-080-6199</p>
                             </div>
                         </div>
                         <!-- single contact info -->
@@ -980,15 +979,15 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="contact-wrapper form-style-two pt-115">
-                        <h4 class="contact-title pb-10"><i class="lni lni-envelope"></i> Leave <span style="color: black;">A Message.</span></h4>
+                        <h4 class="contact-title pb-10"><i class="lni lni-envelope"></i> Manda <span style="color: black;">un mensaje.</span></h4>
 
                         <form id="contact-form" action="assets/contact.php" method="post">
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-input mt-25">
-                                        <label>Name</label>
+                                        <label>Nombre</label>
                                         <div class="input-items default">
-                                            <input name="name" type="text" placeholder="Name">
+                                            <input name="name" type="text" placeholder="Nombre">
                                             <i class="lni lni-user"></i>
                                         </div>
                                     </div>
@@ -1006,9 +1005,9 @@
                                 </div>
                                 <div class="col-md-12">
                                     <div class="form-input mt-25">
-                                        <label>Massage</label>
+                                        <label>Mensaje</label>
                                         <div class="input-items default">
-                                            <textarea name="massage" placeholder="Massage"></textarea>
+                                            <textarea name="Mensaje" placeholder="Mensaje"></textarea>
                                             <i class="lni lni-pencil-alt"></i>
                                         </div>
                                     </div>
@@ -1017,7 +1016,7 @@
                                 <p class="form-message"></p>
                                 <div class="col-md-12">
                                     <div class="form-input light-rounded-buttons mt-30">
-                                        <button class="main-btn light-rounded-two">Send Message</button>
+                                        <button class="main-btn light-rounded-two">Enviar Mensaje</button>
                                     </div>
                                     <!-- form input -->
                                 </div>
@@ -1048,15 +1047,15 @@
                     </div>
                     <!-- footer logo -->
                     <ul class="social text-center mt-60">
-                        <li><a href="https://facebook.com/uideckHQ"><i class="lni lni-facebook-filled"></i></a></li>
-                        <li><a href="https://twitter.com/uideckHQ"><i class="lni lni-twitter-original"></i></a></li>
-                        <li><a href="https://instagram.com/uideckHQ"><i class="lni lni-instagram-original"></i></a></li>
-                        <li><a href="#"><i class="lni lni-linkedin-original"></i></a></li>
+                        <li><a href="https://www.facebook.com/TravitMx"><i class="lni lni-facebook-filled"></i></a></li>
+                        <li><a href="https://twitter.com/"><i class="lni lni-twitter-original"></i></a></li>
+                        <li><a href="https://instagram.com/travitmx"><i class="lni lni-instagram-original"></i></a></li>
+                        <li><a href="https://www.linkedin.com/company/travitmx/"><i class="lni lni-linkedin-original"></i></a></li>
                     </ul>
                     <!-- social -->
                     <div class="footer-support text-center">
-                        <span class="number">+8801234567890</span>
-                        <span class="mail">support@uideck.com</span>
+                        <span class="number">+52 3334758777</span>
+                        <span class="mail">travitmx@gmail.com</span>
                     </div>
                     <div class="copyright text-center mt-35">
                         <p class="text">Designed by <a href="https://uideck.com" class="link-text" rel="nofollow">UIdeck</a> and Built-with <a rel="nofollow" class="link-text" href="https://ayroui.com">Ayro UI</a> </p>
