--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-2B43WS467P"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WZ2Z3C4VYE"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-2B43WS467P');
+  gtag('config', 'G-WZ2Z3C4VYE');
 </script>
     <meta charset="utf-8">
 
