--- a/index.html
+++ b/index.html
@@ -1024,7 +1024,7 @@
                     <!-- footer logo -->
                     <ul class="social text-center mt-60">
                         <li><a href="https://www.facebook.com/TravitMx"><i class="lni lni-facebook-filled"></i></a></li>
-                        <li><a href="https://twitter.com/"><i class="lni lni-twitter-original"></i></a></li>
+                        <li><a href="https://twitter.com/travitmx"><i class="lni lni-twitter-original"></i></a></li>
                         <li><a href="https://instagram.com/travitmx"><i class="lni lni-instagram-original"></i></a></li>
                         <li><a href="https://www.linkedin.com/company/travitmx/"><i class="lni lni-linkedin-original"></i></a></li>
                     </ul>
