--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                             <p class="text">Terminales instaladas en puntos estratégicos para la recarga de la Travit Card; como tiendas de autoservicio, supermercados, plazas, etc.
                             </p>
 
-                            <p class="text"> FACK
+                            <p class="text"> 
                             </p>
                         </div>
                         <!-- single features -->
