--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
                             <div class="accordion" id="accordionExample">
                                 <div class="card">
                                     <div class="card-header" id="headingOne">
-                                        <a href="#"  id="click1"data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne"  onclick="myFunction()">Cual es la Problemática Detectada ?</a>
+                                        <a href="#"  id="click1"data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne"  onclick="myFunction()"> ¿Cual es la Problemática Detectada ?</a>
                                     </div>
 
                                     <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
@@ -603,7 +603,7 @@
                                 </div>
                                 <div class="card">
                                     <div class="card-header" id="headingTwo">
-                                        <a href="#" class="collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo"> Con qué tecnología contará el proyecto? </a>
+                                        <a href="#" class="collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo"> ¿Con qué tecnología contará el proyecto? </a>
                                     </div>
                                     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
                                         <div class="card-body">
@@ -628,7 +628,7 @@
                                 </div>
                                 <div class="card">
                                     <div class="card-header" id="headingThree">
-                                        <a href="#" class="collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Qué es travit card? </a>
+                                        <a href="#" class="collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">¿Qué es travit card? </a>
                                     </div>
                                     <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
                                         <div class="card-body">
@@ -644,7 +644,7 @@
                                 </div>
                                 <div class="card">
                                     <div class="card-header" id="headingFore">
-                                        <a href="#" class="collapsed" data-toggle="collapse" data-target="#collapseFore" aria-expanded="false" aria-controls="collapseFore">Qué beneficios travit ofrece al entorno? </a>
+                                        <a href="#" class="collapsed" data-toggle="collapse" data-target="#collapseFore" aria-expanded="false" aria-controls="collapseFore">¿Qué beneficios travit ofrece al entorno? </a>
                                     </div>
                                     <div id="collapseFore" class="collapse" aria-labelledby="headingFore" data-parent="#accordionExample">
                                         <div class="card-body">
@@ -663,7 +663,7 @@ Cobertura en la necesidad vital de transporte, procurando programas de ahorros e
                                 </div>
                                 <div class="card">
                                     <div class="card-header" id="headingFive">
-                                        <a href="#" class="collapsed" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">Cual es el modelo de negocios de travit? </a>
+                                        <a href="#" class="collapsed" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">¿Cual es el modelo de negocios de travit? </a>
                                     </div>
                                     <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
                                         <div class="card-body">
