--- a/index.html
+++ b/index.html
@@ -623,10 +623,22 @@
 
                                     <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
                                         <div class="card-body">
-                                            <p class="text">El servicio de transporte público es uno de los problemas más complejos que aquejan a la República Mexicana.</p>
+                                            <p>
+                                            <p>• Inseguridad
+                                           <p>
+                                            <p>o Vandalismo y violación a la integridad física y/o emocional.</p>
                                             <br>
-                                            <p class="text">  Esto generado por las necesidades mismas de la rentabilidad económica y el crecimiento demográfico de las ciudades</p>
-                                               .
+                                            <p>• Falta de mantenimiento en las unidades</p>
+                                            <br>
+                                            <p>o Unidades contaminantes, con falta de higiene y mantenimiento mecánico.</p>
+                                            <br>
+                                            <p>• Tiempos prolongados de espera</p>
+                                            <br>
+                                            <p>o No existe una certeza en los tiempos de las unidades debido </p>   <br> <p> a la falta de monitoreo de las mismas.</p>   <br>
+                                            <p>• Sistema de Pago</p>   <br>
+                                            <p>o Aún cuando ya existe un sistema de pago electrónico dentro del Área Metropolitana de Guadalajara, este cuenta con muchas deficiencias como el redondeo en beneficio de la empresa, al no dar el cambio a la hora de pagar con efectivo.</p>
+                                            <br>
+                                            <p>   Además de no poder realizar recargas con tarjetas bancarias y desconocer el saldo exacto de la tarjeta en todo momento.</p>
                                         </div>
                                     </div>
                                 </div>
