Remove Team Member

--- a/index.html
+++ b/index.html
@@ -874,7 +874,7 @@ Cobertura en la necesidad vital de transporte, procurando programas de ahorros e
             </div>
             <!-- row -->
             <div class="row">
-                <div class="col-lg-3 col-sm-6">
+                <div class="col-lg-4 col-sm-6">
                     <div class="team-style-eleven text-center mt-30 wow fadeIn" data-wow-duration="1s" data-wow-delay="0s">
                         <div class="team-image">
                             <img src="assets/images/team/hector.png" alt="Team">
@@ -900,7 +900,7 @@ Cobertura en la necesidad vital de transporte, procurando programas de ahorros e
                     </div>
                     <!-- single team -->
                 </div>
-                <div class="col-lg-3 col-sm-6">
+                <div class="col-lg-4 col-sm-6">
                     <div class="team-style-eleven text-center mt-30 wow fadeIn" data-wow-duration="1s" data-wow-delay="0s">
                         <div class="team-image">
                             <img src="assets/images/team/itzel.png" alt="Team">
@@ -909,7 +909,7 @@ Cobertura en la necesidad vital de transporte, procurando programas de ahorros e
                             <div class="team-social">
                                 <ul class="social">
                                     <li><a href="https://www.facebook.com/ItZeLaNaId" target="_blank"><i class="lni lni-facebook-filled"></i></a></li>
-                                    <li><a href="#" target="_blank"><i class="lni lni-twitter-original"></i></a></li>
+                                    <li><a href="https://twitter.com/AnaidOrtega98?t=KT2pq8setDfv3pmSzHbp6A&s=08" target="_blank"><i class="lni lni-twitter-original"></i></a></li>
                                     <li><a href="https://www.linkedin.com/in/itzel-anaid-ortega-llanderal-b684aa1a2" target="_blank"><i class="lni lni-linkedin-original"></i></a></li>
                                     <li><a href="https://instagram.com/anaidortega98?utm_medium=copy_link" target="_blank"><i class="lni lni-instagram"></i></a></li>
                                 </ul>
@@ -928,36 +928,7 @@ Cobertura en la necesidad vital de transporte, procurando programas de ahorros e
                     </div>
                     <!-- single team -->
                 </div>
-                <div class="col-lg-3 col-sm-6">
-                    <div class="team-style-eleven text-center mt-30 wow fadeIn" data-wow-duration="1s" data-wow-delay="0s">
-                        <div class="team-image">
-                            <img src="assets/images/team/jp.png" alt="Team">
-                        </div>
-                        <div class="team-content">
-                            <div class="team-social">
-                                <ul class="social">
-                                    <li><a href="#"><i class="lni lni-facebook-filled"></i></a></li>
-                                    <li><a href="#"><i class="lni lni-twitter-original"></i></a></li>
-                                    <li><a href="#"><i class="lni lni-linkedin-original"></i></a></li>
-                                    <li><a href="#"><i class="lni lni-instagram"></i></a></li>
-                                </ul>
-                            </div>
-                            <h4 class="team-name"><a href="#">Juan Pedro Llantada</a></h4>
-                            <span class="sub-title">Chief Technology Officer (CTO)
-                            </span>
-                            <span class="second-subtitle">
-                                Ingeniero en Desarrollo de Software.
-                            </span>
-                            <span class="content-text">
- Apasionado por la innovación y IOT. 
- Le gustan los retos que conllevan desarrollar una aplicacion y montar servidores. 
-¡Amante del café y la tecnología
-                            </span>
-                        </div>
-                    </div>
-                    <!-- single team -->
-                </div>
-                <div class="col-lg-3 col-sm-6">
+                <div class="col-lg-4 col-sm-6">
                     <div class="team-style-eleven text-center mt-30 wow fadeIn" data-wow-duration="1s" data-wow-delay="0s">
                         <div class="team-image">
                             <img src="assets/images/team/alex.png" alt="Team">
@@ -965,10 +936,9 @@ Cobertura en la necesidad vital de transporte, procurando programas de ahorros e
                         <div class="team-content">
                             <div class="team-social">
                                 <ul class="social">
-                                    <li><a href=" https://www.facebook.com/hejefica" target="_blank"><i class="lni lni-facebook-filled"></i></a></li>
-                                    <li><a href="https://twitter.com/Hejefica?t=di7F7F8J6hp9JCHHq8jOqQ&s=09" target="_blank"> <i class="lni lni-twitter-original"></i></a></li>
-                                    <li><a href=" https://www.linkedin.com/in/hejefica" target="_blank"><i class="lni lni-linkedin-original"></i></a></li>
-                                    <li><a href="https://www.instagram.com/Hejefica/"   target="_blank"><i class="lni lni-instagram"></i></a></li>
+                                    <li><a href="https://www.facebook.com/skinlessmaple1" target="_blank"><i class="lni lni-facebook-filled"></i></a></li>
+                                    <li><a href="https://www.linkedin.com/in/alejandro-garcia-espinosa-597596219/" target="_blank"><i class="lni lni-linkedin-original"></i></a></li>
+                                    <li><a href="https://www.instagram.com/alejandroge1/"   target="_blank"><i class="lni lni-instagram"></i></a></li>
                                 </ul>
                             </div>
                             <h4 class="team-name"><a href="#">Alejandro García Espinosa</a></h4>
